[package]
name = "esp-at-nal"
description = "Network layer client for ESP-AT modems"
keywords = ["ESP8266", "network", "no_std", "at"]
categories  = ["embedded", "network-programming", "no-std"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-esp-at-nal"
readme = "README.md"
documentation = "https://docs.rs/esp-at-nal"

[dependencies]
atat = { git="https://github.com/FactbirdHQ/atat.git", rev="2f55331d7e2d1cdae37804fbe9fa1a78def95fa8"}
embedded-nal = "0.9"
nb = "1.1"
fugit = "0.3"
fugit-timer = "0.1"
heapless = "0.8"
bbqueue = { version = "0.5.1", optional = true }
numtoa = "0.2"
base16 = { version = "0.2", default-features = false }
embassy-sync = { version = "0.6" , optional = true}

[dev-dependencies]
mockall = "0.13"
embassy-sync = "0.6"
critical-section = { version = "1.2.0" , features = ["std"]}

[features]
default = ["examples"]

# Fail on warnings
strict = []

# Enables logging of ATAT crate
log = ['atat/log']

# Automic support for thumbv6m targets
thumbv6 = ['bbqueue/thumbv6']

# Contains mocks for doc examples and may be disabled for production.
examples = ["embassy-sync"]
